--- a/index.html
+++ b/index.html
@@ -6,21 +6,39 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta
+      name="description"
+      content=""
+    />
+    <meta
+      name="author"
+      content=""
+    />
     <title>Moshe - Sites For Everyone</title>
     <!-- Primary Meta Tags -->
     <title>Moshe - Sites For Everyone</title>
-    <meta name="title" content="Moshe - Sites For Everyone" />
+    <meta
+      name="title"
+      content="Moshe - Sites For Everyone"
+    />
     <meta
       name="description"
       content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements."
     />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://mosheschwartzberg.com/" />
-    <meta property="og:title" content="Moshe - Sites For Everyone" />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:url"
+      content="https://mosheschwartzberg.com/"
+    />
+    <meta
+      property="og:title"
+      content="Moshe - Sites For Everyone"
+    />
     <meta
       property="og:description"
       content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements."
@@ -31,9 +49,18 @@
     />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://mosheschwartzberg.com/" />
-    <meta property="twitter:title" content="Moshe - Sites For Everyone" />
+    <meta
+      property="twitter:card"
+      content="summary_large_image"
+    />
+    <meta
+      property="twitter:url"
+      content="https://mosheschwartzberg.com/"
+    />
+    <meta
+      property="twitter:title"
+      content="Moshe - Sites For Everyone"
+    />
     <meta
       property="twitter:description"
       content="If you are in need of a website, you can discover comprehensive information on how to collaborate with our team to meet your requirements."
@@ -66,8 +93,15 @@
       rel="stylesheet"
       type="text/css"
     />
+    <!-- <link
+      rel="stylesheet"
+      href="css/popUPstyles.css"
+    /> -->
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link
+      href="css/styles.css"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
@@ -75,12 +109,16 @@
   </head>
   <body id="page-top">
     <!-- Navigation-->
+
     <nav
       class="navbar navbar-expand-lg navbar-light fixed-top bg-dark"
       id="mainNav"
     >
       <div class="container">
-        <a class="navbar-brand" href="#">
+        <a
+          class="navbar-brand"
+          href="#"
+        >
           <img
             src="assets/img/logos/logo.png"
             alt="Logo"
@@ -100,20 +138,39 @@
           Menu
           <i class="fas fa-bars ms-1"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
+        <div
+          class="collapse navbar-collapse"
+          id="navbarResponsive"
+        >
           <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#services">Services</a>
+              <a
+                class="nav-link"
+                href="#services"
+                >Services</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#portfolio">Portfolio</a>
+              <a
+                class="nav-link"
+                href="#portfolio"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#price">Prices</a>
+              <a
+                class="nav-link"
+                href="#price"
+                >Prices</a
+              >
             </li>
             <!-- <li class="nav-item"><a class="nav-link" href="#team">Team</a></li> -->
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a
+                class="nav-link"
+                href="#contact"
+                >Contact</a
+              >
             </li>
           </ul>
         </div>
@@ -124,14 +181,29 @@
       <div class="container">
         <div class="masthead-subheading">Welcome!</div>
         <div class="masthead-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase" href="#services"
+
+        <a
+          class="btn btn-primary btn-xl text-uppercase"
+          href="#services"
           >Show me Around</a
         >
+
+        <!-- <a
+          class="btn btn-primary btn-xl text-uppercase"
+          href="#"
+        >
+          This website is under development and is experiencing loading time
+          issues. We apologize for the inconvenience. If you have any questions,
+          please contact us at moshe@mosheschwartzberg.com.</a
+        > -->
       </div>
     </header>
 
     <!-- Services-->
-    <section class="page-section" id="services">
+    <section
+      class="page-section"
+      id="services"
+    >
       <div class="container">
         <div class="text-center">
           <h2 class="section-heading text-uppercase">Services</h2>
@@ -187,7 +259,10 @@
       </div>
     </section>
     <!-- Portfolio Grid-->
-    <section class="page-section bg-light" id="portfolio">
+    <section
+      class="page-section bg-light"
+      id="portfolio"
+    >
       <div class="container">
         <div class="text-center">
           <h2 class="section-heading text-uppercase">Portfolio</h2>
@@ -424,14 +499,24 @@
 
     <!-- Price -->
     <!-- Pricing Section - Home Page -->
-    <section id="price" class="pricing">
+    <section
+      id="price"
+      class="pricing"
+    >
       <!--  Section Title -->
-      <div class="container text-center section-title" data-aos="fade-up">
+      <div
+        class="container text-center section-title"
+        data-aos="fade-up"
+      >
         <!-- <h2 class="mb-xxl-5">Pricing</h2> -->
       </div>
       <!-- End Section Title -->
 
-      <div class="container" data-aos="zoom-in" data-aos-delay="100">
+      <div
+        class="container"
+        data-aos="zoom-in"
+        data-aos-delay="100"
+      >
         <div class="row g-4">
           <div class="col-lg-4">
             <div class="pricing-item">
@@ -487,7 +572,11 @@
               </ul>
 
               <div class="text-center">
-                <a href="#contact" class="buy-btn">Get a Price Quote</a>
+                <a
+                  href="#contact"
+                  class="buy-btn"
+                  >Get a Price Quote</a
+                >
               </div>
             </div>
           </div>
@@ -530,7 +619,11 @@
                 </li>
               </ul>
               <div class="text-center">
-                <a href="#contact" class="buy-btn">Get a Price Quote</a>
+                <a
+                  href="#contact"
+                  class="buy-btn"
+                  >Get a Price Quote</a
+                >
               </div>
             </div>
           </div>
@@ -593,7 +686,11 @@
                 </li>
               </ul>
               <div class="text-center">
-                <a href="#contact" class="buy-btn">Get a Price Quote</a>
+                <a
+                  href="#contact"
+                  class="buy-btn"
+                  >Get a Price Quote</a
+                >
               </div>
             </div>
           </div>
@@ -604,14 +701,21 @@
     <!-- End Pricing Section -->
 
     <!-- Contact-->
-    <section class="page-section" id="contact">
+    <section
+      class="page-section"
+      id="contact"
+    >
       <div class="container">
         <div class="text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
           <h3 class="section-subheading text-muted"></h3>
         </div>
         <!-- netlify -->
-        <form id="contactForm" action="/php/contact.php" method="POST">
+        <form
+          id="contactForm"
+          action="/php/contact.php"
+          method="POST"
+        >
           <div class="row align-items-stretch mb-5">
             <div class="col-md-6">
               <div class="form-group">
@@ -623,7 +727,10 @@
                   placeholder="Jon Doe"
                   required
                 />
-                <div class="invalid-feedback" data-sb-feedback="name:required">
+                <div
+                  class="invalid-feedback"
+                  data-sb-feedback="name:required"
+                >
                   A name is required.
                 </div>
               </div>
@@ -636,7 +743,10 @@
                   placeholder="you@example.com"
                   required
                 />
-                <div class="invalid-feedback" data-sb-feedback="email:required">
+                <div
+                  class="invalid-feedback"
+                  data-sb-feedback="email:required"
+                >
                   An email is required.
                 </div>
               </div>
@@ -649,7 +759,10 @@
                   placeholder="XXX-XXX-XXXX"
                   required
                 />
-                <div class="invalid-feedback" data-sb-feedback="phone:required">
+                <div
+                  class="invalid-feedback"
+                  data-sb-feedback="phone:required"
+                >
                   A phone number is required.
                 </div>
               </div>
@@ -736,8 +849,14 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          <div
+            class="close-modal"
+            data-bs-dismiss="modal"
+          >
+            <img
+              src="assets/img/close-icon.svg"
+              alt="Close modal"
+            />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -795,8 +914,14 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          <div
+            class="close-modal"
+            data-bs-dismiss="modal"
+          >
+            <img
+              src="assets/img/close-icon.svg"
+              alt="Close modal"
+            />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -856,8 +981,14 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          <div
+            class="close-modal"
+            data-bs-dismiss="modal"
+          >
+            <img
+              src="assets/img/close-icon.svg"
+              alt="Close modal"
+            />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -917,8 +1048,14 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          <div
+            class="close-modal"
+            data-bs-dismiss="modal"
+          >
+            <img
+              src="assets/img/close-icon.svg"
+              alt="Close modal"
+            />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -975,8 +1112,14 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          <div
+            class="close-modal"
+            data-bs-dismiss="modal"
+          >
+            <img
+              src="assets/img/close-icon.svg"
+              alt="Close modal"
+            />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1033,8 +1176,14 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          <div
+            class="close-modal"
+            data-bs-dismiss="modal"
+          >
+            <img
+              src="assets/img/close-icon.svg"
+              alt="Close modal"
+            />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1090,8 +1239,14 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          <div
+            class="close-modal"
+            data-bs-dismiss="modal"
+          >
+            <img
+              src="assets/img/close-icon.svg"
+              alt="Close modal"
+            />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1148,8 +1303,14 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
-          <div class="close-modal" data-bs-dismiss="modal">
-            <img src="assets/img/close-icon.svg" alt="Close modal" />
+          <div
+            class="close-modal"
+            data-bs-dismiss="modal"
+          >
+            <img
+              src="assets/img/close-icon.svg"
+              alt="Close modal"
+            />
           </div>
           <div class="container">
             <div class="row justify-content-center">
@@ -1199,6 +1360,21 @@
         </div>
       </div>
     </div>
+    <!-- <div id="popup-overlay">
+      <div id="popup-box">
+        <span id="close-popup">&times;</span>
+        <p>
+          This website is under development and is experiencing loading time
+          issues. We apologize for the inconvenience. If you have any questions,
+          please contact us at
+          <a href="mailto:moshe@mosheschwartzberg.com"
+            >moshe@mosheschwartzberg.com</a
+          >.
+        </p>
+      </div>
+    </div>
+
+    <script src="js/popup.js"></script> -->
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
